grammar.js
    source_file: $ =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_definition, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: _$ => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    identifier: _$ => /[_\p{XID_Start}][\p{XID_Continue}]*/,
    _constant_identifier: $ => alias($.identifier, $.constant_identifier),
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _declaration: $ =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), '{', repeat($._declaration), '}'),
      ),

    variable_declaration: $ =>
      seq(
        repeat($._attribute),
        repeat($.storage_class),
        $.type,
        commaSep1(choice($.declarator, $.bitfield_declarator)),
        ';',
      ),

    declarator: $ =>
      prec.right(
        seq(
          $.identifier,
          optional(seq(optional($.template_parameters), '=', $._initializer)),
        ),
      ),

    _initializer: $ => prec.left(choice($._non_void_initializer, 'void')),

    type: $ => prec.right(seq(repeat($.type_qualifier), $._type2, repeat($._type_suffix))),

    _type2: $ =>
      prec.right(
        choice(
          'void',
          $.primitive_type,
          $._qualified_id,
          seq('.', $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, '.', $._qualified_id),
          seq($.type_qualifier, '(', $.type, ')'),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    _type_suffix: $ =>
      prec.right(
        choice(
          '*',
          seq('[', ']'),
          seq('[', $._expression, ']'),
          seq('[', $._expression, '..', $._expression, ']'),
          seq('[', $.type, ']'),
          seq('delegate', $.parameters, repeat($.member_function_attribute)),
          seq('function', $.parameters, repeat($._function_attribute)),
        ),
      ),

    _attribute: $ =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_qualifier,
          'private',
          'package',
          seq('package', '(', $.module_fqn, ')'),
          'protected',
          'public',
          'export',
          'static',
          'extern',
          'abstract',
          'final',
          'override',
          'synchronized',
          'auto',
          'scope',
          '__gshared',
          $.at_attribute,
          $._function_attribute_kwd,
          'ref',
          'return',
        ),
      ),

    at_attribute: $ =>
      prec.right(
        choice(
          seq('@', $.identifier),
          seq('@', $.identifier, $.arguments),
          seq('@', $.template_instance),
          seq('@', $.template_instance, $.arguments),
          seq('@', '(', $._argument_list, ')'),
        ),
      ),

    _argument_list: $ => prec.right(commaSep1Comma($._expression)),

    expression_list: $ => prec.right(commaSep1($._expr)),

    // formally this is AssignExpression, but we use a different
    // structure.  This is just a single _expression term, and
    // cannot be used in a comma _expression. Expression is
    // used where comma separated expressions are valid.
    //
    // The formal D grammar permits _expression lists in many places,
    // but then the compiler rejects almost any attempt to use them.
    // We are electing to reject these in the syntax, rather than
    // in the semantic.  This makes our grammar simpler, and has
    // zero effect on any actual legal code.
    _expression: $ => $._expr,
    _expr: $ =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $._binary_expression,
          $._unary_expr,
        ),
      ),

    assignment_expression: $ =>
      prec.right(
        -1,
        binaryOp(
          $._expr,
          choice(
            '=',
            '+=',
            '-=',
            '*=',
            '/=',
            '%=',
            '&=',
            '|=',
            '^=',
            '~=',
            '<<=',
            '>>=',
            '>>>=',
            '^^=',
          ),
          $._expr,
        ),
      ),

    // TODO: Compare with tree-sitter-c's implementation instead
    equal_binary_expression: $ =>
      prec.left('compare', binaryOp($._expr, choice('==', '!='), $._expr)),

    rel_binary_expression: $ =>
      prec.left(
        'compare',
        binaryOp($._expr, choice('<=', '<', '>', '>='), $._expr),
      ),

    add_binary_expression: $ =>
      prec.left('add', binaryOp($._expr, choice('+', '-', '~'), $._expr)),

    mul_binary_expression: $ =>
      prec.left('multiply', binaryOp($._expr, choice('*', '/', '%'), $._expr)),

    postfix_expression: $ =>
      prec.left(seq($._unary_expr, field('operator', choice('++', '--')))),

    _unary_expr: $ =>
      choice(
        $._primary_expr,
        $.unary_expression,
        $.new_expression,
        $.delete_expression,
        $.assert_expression,
        $.cast_expression,
        $.throw_expression,
        $.call_expression,
        $.slice_expression,
        $.postfix_expression,
        $.property_expression,
      ),

    unary_expression: $ =>
      prec.right(
        'unary',
        seq(
          field('operator', choice('~', '+', '-', '!', '*', '&', '++', '--')),
          $._unary_expr,
        ),
      ),

    quoted_string_literal: $ =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\]+/)),
            $.escape_sequence,
            $.htmlentity,
          ),
        ),
        token.immediate(/"[cdw]?/),
      ),

    _declarations_and_statements: $ => repeat1($._declaration_or_statement),

    _declaration_or_statement: $ => choice($._declaration, $._statement),

    scope_statement: $ => $._declaration_or_statement,
    compound_statement: $ =>
      seq(
        '{',
        optional($._declarations_and_statements),
        optional($.label),
        '}',
      ),

    expression_statement: $ => seq($.expression_list, ';'),

    for_statement: $ =>
      seq(
        'for',
        '(',
        $._for1,
        optional($._for2),
        optional(seq(';', optional($._for3))),
        ')',
        $.body,
      ),

    _for1: $ =>
      choice(
        field('init', $._declaration2),
        field('init', $._statement_no_case_no_default),
        ';',
      ),
    _for2: $ => field('test', $._expression),
    _for3: $ => field('step', $.expression_list),

    _foreach: $ => choice('foreach', 'foreach_reverse'),

    foreach_statement: $ =>
      choice(
        seq(
          $._foreach,
          '(',
          commaSep1($.foreach_type),
          ';',
          $._expression,
          ')',
          $.body,
        ),
        seq(
          $._foreach,
          '(',
          $.foreach_type,
          ';',
          $._expression,
          '..',
          $._expression,
          ')',
          $.body,
        ),
      ),

    foreach_type: $ =>
      seq(
        repeat(choice('ref', 'alias', 'enum', 'scope', $.type_qualifier)),
        optional($.type),
        $.identifier,
      ),

    return_statement: $ => seq('return', optional($._expression), ';'),

    enum_declaration: $ =>
      seq(
        repeat($._attribute),
        'enum',
        field('name', $._type_identifier),
        optional(seq(':', field('type', $.type))),
        choice(';', field('body', $._enum_body)),
      ),

    _enum_body: $ => seq('{', commaSep1Comma($.enum_member_declaration), '}'),

    _enum_member_attribute: $ =>
      choice($.deprecated_attribute, $.at_attribute),

    enum_member_declaration: $ =>
      seq(
        repeat($._enum_member_attribute),
        $._constant_identifier,
        optional(seq('=', $._expr)),
      ),

    anonymous_enum_declaration: $ =>
      seq(
        repeat($._attribute),
        'enum',
        optional(seq(':', field('type', $.type))),
        field('body', $._anonymous_enum_body),
      ),

    _anonymous_enum_body: $ => seq('{', commaSep1Comma(choice($.anonymous_enum_member, $.enum_member_declaration)), '}'),

    anonymous_enum_member: $ => seq($.type, $._constant_identifier, '=', $._expr),

    function_declaration: $ =>
      seq(
        repeat($._attribute),
        prec.right(
          choice(
            seq(
              $.type,
              $.identifier,
              $.parameters,
              repeat($.member_function_attribute),
              $.function_body,
            ),
            seq(
              $.type,
              $.identifier,
              $.template_parameters,
              $.parameters,
              repeat($.member_function_attribute),
              optional($.template_constraint),
              $.function_body,
            ),
            seq(
              repeat1($.storage_class),
              $.identifier,
              $.parameters,
              repeat($.member_function_attribute),
              $.function_body,
            ),
            seq(
              repeat1($.storage_class),
              $.identifier,
              $.template_parameters,
              $.parameters,
              repeat($.member_function_attribute),
              optional($.template_constraint),
              $.function_body,
            ),
          ),
        ),
      ),

    parameters: $ =>
      prec.right(
        choice(
          seq('(', ')'),
          seq('(', commaSep1Comma($.parameter), ')'),
          seq('(', commaSep1($.parameter), ',', $.ellipses, ')'),
          seq(
            '(',
            commaSep1($.parameter),
            ',',
            $._variadic_arguments_attributes,
            $.ellipses,
            ')',
          ),
          seq('(', $.ellipses, ')'),
          seq('(', $._variadic_arguments_attributes, $.ellipses, ')'),
        ),
      ),

    parameter: $ => prec.right($._parameter),

    _parameter: $ =>
      prec.right(
        choice(
          seq(repeat($.parameter_attribute), $.type),
          seq(repeat($.parameter_attribute), $.type, $.ellipses),
          seq(
            repeat($.parameter_attribute),
            $.type,
            '=',
            $._expr,
            optional($.ellipses),
          ),
          seq(repeat($.parameter_attribute), $.type, $.identifier),
          seq(repeat($.parameter_attribute), $.type, $.identifier, $.ellipses),
          seq(
            repeat($.parameter_attribute),
            $.type,
            $.identifier,
            '=',
            $._expr,
            optional($.ellipses),
          ),
        ),
      ),

    parameter_attribute: $ =>
      choice(
        $.at_attribute,
        $.type_qualifier,
        'final',
        'in',
        'lazy',
        'out',
        'ref',
        'scope',
        'auto',
        'return',
      ),

    _variadic_arguments_attributes: $ =>
      repeat1($.variadic_arguments_attribute),

    function_body: $ =>
      choice(
        seq(optional($._in_out_contract_expressions), '=>', $._expr, ';'),
        seq(repeat($._function_contract), optional('do'), $.compound_statement),
        seq(repeat($._function_contract), ';'),
        seq(repeat($._function_contract), $._in_out_statement),
      ),

    _function_contract: $ =>
      choice($._in_out_contract_expression, $._in_out_statement),

    _in_out_contract_expressions: $ => repeat1($._in_out_contract_expression),

    _in_out_statement: $ => choice($.in_statement, $.out_statement),

    template_parameter: $ =>
      prec.right(
        choice(
          $._template_type_parameter,
          $._template_value_parameter,
          $._template_alias_parameter,
          $._template_sequence_parameter,
        ),
      ),

    template_parameters: $ =>
      seq('(', optional($._template_parameter_list), ')'),

    _template_parameter_list: $ =>
      prec.right(commaSep1Comma($.template_parameter)),

    _template_type_parameter: $ =>
      prec.right(
        seq(
          optional('this'),
          $.identifier,
          optional(seq(':', $.type)),
          optional(seq('=', $.type)),
        ),
      ),

    _template_value_parameter: $ =>
      prec.right(
        seq(
          $.type,
          $.identifier,
          optional(seq(':', $._expr)),
          optional(seq('=', $._expr)),
        ),
      ),

    _template_sequence_parameter: $ => seq($.identifier, '...'),

    _template_alias_parameter: $ =>
      prec.right(
        seq(
          'alias',
          optional($.type),
          $.identifier,
          optional(seq(':', choice($.type, $._expr))),
          optional(seq('=', choice($.type, $._expr))),
        ),
      ),
