test/corpus/expression.scm
==================
Division
==================
int x  = 5 / 3;
---

(source_file
  (variable_declaration
    (type
      (identifier))
    (declarator
      (identifier)
      (mul_binary_expression
        (integer_literal)
        (integer_literal)))))
